Fix textarea sizing issue on Firefox

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -175,6 +175,8 @@ textarea.editor-input {
     left: 0;
     right: 0;
     bottom: 0;
+    width: 100%;
+    height: 100%;
 }
 
 textarea.editor-input:focus {
